# PredictCustomerChurn

./: .gitignore  README.md  churn_notebook.ipynb  main.py  pyproject.toml
docs/models/: logistic_model.pkl
src/: churn_library.py
src/churn/: churn_library.py
src/helpers/: constants.py  project_paths.py  timer.py
tests/: churn_script_logging_and_tests.py  test_churn_library.py
